# src/main/routes/order-routes.ts
@@ -3,10 +3,15 @@ import { Repository } from '../../core/domain/repositories/repository';
 import {
   makeAddOneOrderHttpController,
   makeFindOrdersHttpController,
+  makeUpdateOrderStatusHttpController,
 } from '../factories/order-factories';
 import { adaptRoute } from './route';
 
 export const orderRoutes = (router: Router, repository: Repository) => {
   router.post('/orders', adaptRoute(makeAddOneOrderHttpController(repository)));
   router.get('/orders', adaptRoute(makeFindOrdersHttpController(repository)));
+  router.patch(
+    '/orders/:id/status',
+    adaptRoute(makeUpdateOrderStatusHttpController(repository)),
+  );
 };
